results/classifier/zero-shot/118/review/1904464
user-level: 0.833
graphic: 0.809
semantic: 0.807
kernel: 0.800
mistranslation: 0.798
architecture: 0.751
files: 0.693
performance: 0.662
PID: 0.648
permissions: 0.646
hypervisor: 0.623
virtual: 0.613
device: 0.566
debug: 0.554
socket: 0.542
ppc: 0.535
network: 0.534
peripherals: 0.521
x86: 0.520
TCG: 0.516
VMM: 0.508
vnc: 0.499
KVM: 0.480
register: 0.479
risc-v: 0.476
assembly: 0.449
i386: 0.408
arm: 0.408
boot: 0.348
--------------------
kernel: 0.733
hypervisor: 0.124
TCG: 0.121
files: 0.052
x86: 0.049
PID: 0.041
debug: 0.029
virtual: 0.028
ppc: 0.021
arm: 0.018
boot: 0.016
semantic: 0.016
performance: 0.015
network: 0.013
architecture: 0.011
device: 0.010
register: 0.007
user-level: 0.006
peripherals: 0.005
permissions: 0.005
assembly: 0.004
risc-v: 0.004
socket: 0.003
vnc: 0.002
graphic: 0.002
i386: 0.002
VMM: 0.002
KVM: 0.001
mistranslation: 0.001

Build fails with 64 bits time_t

time element is deprecated on new input_event structure in kernel's
input.h [1]

This will avoid the following build failure:

hw/input/virtio-input-host.c: In function 'virtio_input_host_handle_status':
hw/input/virtio-input-host.c:198:28: error: 'struct input_event' has no member named 'time'
  198 |     if (gettimeofday(&evdev.time, NULL)) {
      |                            ^

Fixes:
 - http://autobuild.buildroot.org/results/a538167e288c14208d557cd45446df86d3d599d5
 - http://autobuild.buildroot.org/results/efd4474fb4b6c0ce0ab3838ce130429c51e43bbb

[1] https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit?id=152194fe9c3f



Please send patches to the qemu-devel mailing list (and CC: the corresponding maintainers) for proper review of your patch. See https://wiki.qemu.org/Contribute/SubmitAPatch for details. Thanks!

The QEMU project is currently moving its bug tracking to another system.
For this we need to know which bugs are still valid and which could be
closed already. Thus we are setting the bug state to "Incomplete" now.

If the bug has already been fixed in the latest upstream version of QEMU,
then please close this ticket as "Fix released".

If it is not fixed yet and you think that this bug report here is still
valid, then you have two options:

1) If you already have an account on gitlab.com, please open a new ticket
for this problem in our new tracker here:

    https://gitlab.com/qemu-project/qemu/-/issues

and then close this ticket here on Launchpad (or let it expire auto-
matically after 60 days). Please mention the URL of this bug ticket on
Launchpad in the new ticket on GitLab.

2) If you don't have an account on gitlab.com and don't intend to get
one, but still would like to keep this ticket opened, then please switch
the state back to "New" or "Confirmed" within the next 60 days (other-
wise it will get closed as "Expired"). We will then eventually migrate
the ticket automatically to the new system (but you won't be the reporter
of the bug in the new system and thus you won't get notified on changes
anymore).

Thank you and sorry for the inconvenience.


Fabrice, thanks for moving the ticket here:
https://gitlab.com/qemu-project/qemu/-/issues/246
... so I'm closing this one on Launchpad now.

